renommer les 2 css

--- a/caihongsite/document/Publications.html
+++ b/caihongsite/document/Publications.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Publications</title>
-    <link rel="stylesheet" href="caihongsite/css/normalize.css">
-    <link rel="stylesheet" href="caihongsite/css/style.css">
+    <link rel="stylesheet" href="/normalize.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <div class="header">
-        <span class="a"><a href="index.html">Home</a></span>
-        <span class="b"><a href="caihongsite/document/cv.html">CV</a></span>
-        <span class="c"><a href="caihongsite/document/Publications.html">Publications</a></span>
-        <span class="d"><a href="caihongsite/document/Contact.html">Contact</a> </span><br>
+        <span class="a"><a href="/index.html">Home</a></span>
+        <span class="b"><a href="/caihongsite/document/cv.html">CV</a></span>
+        <span class="c"><a href="/caihongsite/document/Publications.html">Publications</a></span>
+        <span class="d"><a href="/caihongsite/document/Contact.html">Contact</a> </span><br>
     </div>
 
     
