Changer les urls pour Home

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="I am a PhD candidate in Phonetics and Phonology at Université Paris Cité, under the supervision of Prof. Ioana Chitoran and Dr. Alexander Martin. ">
     <title>Caihong Weng</title>
-    <link rel="stylesheet" href="/normalize.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="caihongsite/css/normalize.css">
+    <link rel="stylesheet" href="caihongsite/css/style.css">
 </head>
 <body>
     <div class="header">
-        <span class="a"><a href="/index.html">Home</a></span>
-        <span class="b"><a href="/caihongsite/document/cv.html">CV</a></span>
-        <span class="c"><a href="/caihongsite/document/Publications.html">Publications</a></span>
-        <span class="d"><a href="/caihongsite/document/Contact.html">Contact</a> </span><br>
+        <span class="a"><a href="index.html">Home</a></span>
+        <span class="b"><a href="caihongsite/document/cv.html">CV</a></span>
+        <span class="c"><a href="caihongsite/document/Publications.html">Publications</a></span>
+        <span class="d"><a href="caihongsite/document/Contact.html">Contact</a> </span><br>
     </div>
 
     <div><img src="caihongsite/images/caihong.jpg" alt="Image de Caihong">
