--- a/caihongsite/document/Publications.html
+++ b/caihongsite/document/Publications.html
@@ -20,17 +20,25 @@
 
 
 
-    <h1 class="h1public">PEER-REVIEWED RESEARCH OUTPUT</h1>
+<div class="publicenter">
+
+
+    <h2>Journal articles:</h2>
+
+    <span class="boldt">Weng, C</span class="boldt">., Chitoran, I., Martin, A. (2023). Bilingual phonological contrast perception: The influence of Quanzhou Southern Min on Mandarin non-sibilant fricative discrimination. JASA Express Letters, 3(7), 075202.
 
 
 
-<div class="publicenter"> 
+    <h2>Conference presentations:</h2>
 
+    <h3>Oral presentations:</h3>
+    <span class="boldt">Weng, C</span class="boldt">. Martin, A. Chitoran, I. (2023). Non-native phonological perception in a bilingual community: The influence of Southern Min on perception of Mandarin fricatives. PaPE 2023 -Phonetics and Phonology in Europe 2023, June 2nd–4th, 2023, Nijmegen, Netherlands.
 
-    <h2>Poster presentations:</h2>
+    Hutin, M. <span class="boldt">Weng, C</span class="boldt">, Vasilescu, I., Lamel, L., Adda-Decker, M., Chitoran, I. (2022). La liaison facultative en français: étude de grands corpus combinant approche automatique relâchée et jugement perceptif. CMLF 2022–8th Congrès Mondial de Linguistique Française, July 4th-8th 2022, Orléans, France.
 
-<span class="boldt">Weng, C</span class="boldt">. Martin, A. Chitoran, I. Perceptual assimilation of Mandarin non-sibilant fricatives by speakers of Quanzhou Southern Min. JEP 2022 - 34th Journées d’Études sur la Parole, June 13th–17th, 2022, Île de Noirmoutier, France <br> <br>
+    <h3>Poster presentations:</h3>
 
+    <span class="boldt">Weng, C</span class="boldt">. Martin, A. Chitoran, I. Perceptual assimilation of Mandarin non-sibilant fricatives by speakers of Quanzhou Southern Min. JEP 2022 - 34th Journées d’Études sur la Parole, June 13th–17th, 2022, Île de Noirmoutier, France <br> <br>
 
 
 Hutin, M. <span class="boldt">Weng, C</span class="boldt">. Vasilescu, I. Lamel, L. Disfluences et erreurs d’alignement au niveau du phonème : le cas des consonnes de liaison en français. JEP 2022 - 34th Journées d’Études sur la Parole, June 13th–17th, 2022, Île de Noirmoutier, France <br> <br>
@@ -41,7 +49,7 @@ Hutin, M. <span class="boldt">Weng, C</span class="boldt">. Vasilescu, I. Lamel,
 
 
 
-<h2>Accepted papers:</h2>
+<h2>Conference Proceedings:</h2>
 
 
 
@@ -55,17 +63,6 @@ Hutin, M. <span class="boldt">Weng, C</span class="boldt">. Vasilescu, I. Lamel,
 
 Hutin, M. <span class="boldt">Weng, C</span class="boldt">. Adda-Decker, M. Vasilescu, I. Lamel, L. Disfluences et erreurs d’alignement au niveau du phonème: le cas des consonnes de liaison en français. JEP 2022 - 34th Journées d’Études sur la Parole, June 13th–17th, 2022, Île de Noirmoutier, France <br> <br>
 
-
-
-<h2>Additional output:</h2>
-
-
-
-<span class="boldt">Weng, C</span class="boldt">. Martin, A. Chitoran, I. Perceptual assimilation of Mandarin non-sibilant fricatives by speakers of Quanzhou Southern Min. Symposium annual Labex EFL 2022, June 16th, 2022, Paris, France. <br> <br>
-
-
-
-<span class="boldt">Weng, C</span class="boldt">. Hutin, M. Vasilescu, I. Lamel, L. Adda-Decker, M. Chitoran, I. (2022). A typology of automatic alignment errors in the case of French liaison. Symposium annual Labex EFL 2022, Juin 16th, 2022, Paris, France. <br> <br>
 
 
     </div>
