--- a/caihongsite/document/Publications.html
+++ b/caihongsite/document/Publications.html
@@ -25,27 +25,28 @@
 
     <h2>Journal articles:</h2>
 
-    <span class="boldt">Weng, C</span class="boldt">., Chitoran, I., Martin, A. (2023). Bilingual phonological contrast perception: The influence of Quanzhou Southern Min on Mandarin non-sibilant fricative discrimination. JASA Express Letters, 3(7), 075202.
+    <span class="boldt">Weng, C</span>., Chitoran, I., Martin, A. (2023). Bilingual phonological contrast perception: The influence of Quanzhou Southern Min on Mandarin non-sibilant fricative discrimination. JASA Express Letters, 3(7), 075202.
 
 
 
     <h2>Conference presentations:</h2>
 
     <h3>Oral presentations:</h3>
-    <span class="boldt">Weng, C</span class="boldt">. Martin, A. Chitoran, I. (2023). Non-native phonological perception in a bilingual community: The influence of Southern Min on perception of Mandarin fricatives. PaPE 2023 -Phonetics and Phonology in Europe 2023, June 2nd–4th, 2023, Nijmegen, Netherlands.
+    <span class="boldt">Weng, C</span>. Martin, A. Chitoran, I. (2023). Non-native phonological perception in a bilingual community: The influence of Southern Min on perception of Mandarin fricatives. PaPE 2023 -Phonetics and Phonology in Europe 2023, June 2nd–4th, 2023, Nijmegen, Netherlands.
 
-    Hutin, M. <span class="boldt">Weng, C</span class="boldt">, Vasilescu, I., Lamel, L., Adda-Decker, M., Chitoran, I. (2022). La liaison facultative en français: étude de grands corpus combinant approche automatique relâchée et jugement perceptif. CMLF 2022–8th Congrès Mondial de Linguistique Française, July 4th-8th 2022, Orléans, France.
+    Hutin, M. <span class="boldt">Weng, C</span>, Vasilescu, I., Lamel, L., Adda-Decker, M., Chitoran, I. (2022). La liaison facultative en français: étude de grands corpus combinant approche automatique relâchée et jugement perceptif. CMLF 2022–8th Congrès Mondial de Linguistique Française, July 4th-8th 2022, Orléans, France.
 
     <h3>Poster presentations:</h3>
 
-    <span class="boldt">Weng, C</span class="boldt">. Martin, A. Chitoran, I. Perceptual assimilation of Mandarin non-sibilant fricatives by speakers of Quanzhou Southern Min. JEP 2022 - 34th Journées d’Études sur la Parole, June 13th–17th, 2022, Île de Noirmoutier, France <br> <br>
-
-
-Hutin, M. <span class="boldt">Weng, C</span class="boldt">. Vasilescu, I. Lamel, L. Disfluences et erreurs d’alignement au niveau du phonème : le cas des consonnes de liaison en français. JEP 2022 - 34th Journées d’Études sur la Parole, June 13th–17th, 2022, Île de Noirmoutier, France <br> <br>
+    <span class="boldt">Weng, C</span>. Martin, A. Chitoran, I. Perceptual assimilation of Mandarin non-sibilant fricatives by speakers of Quanzhou Southern Min. JEP 2022 - 34th Journées d’Études sur la Parole, June 13th–17th, 2022, Île de Noirmoutier, France <br> <br>
 
 
 
-<span class="boldt">Weng, C</span class="boldt">. Hutin, M. Vasilescu, I. Lamel, L. Adda-Decker, M. Chitoran, I. (2022). A typology of automatic alignment errors in the case of French liaison. ConSOLE 2022 - 30th Conference of the Student Organisation of Linguistics in Europe, January 25th–27th, 2022, Nantes, France <br> <br>
+    Hutin, M. <span class="boldt">Weng, C</span>. Vasilescu, I. Lamel, L. Disfluences et erreurs d’alignement au niveau du phonème : le cas des consonnes de liaison en français. JEP 2022 - 34th Journées d’Études sur la Parole, June 13th–17th, 2022, Île de Noirmoutier, France <br> <br>
+
+
+
+    <span class="boldt">Weng, C</span>. Hutin, M. Vasilescu, I. Lamel, L. Adda-Decker, M. Chitoran, I. (2022). A typology of automatic alignment errors in the case of French liaison. ConSOLE 2022 - 30th Conference of the Student Organisation of Linguistics in Europe, January 25th–27th, 2022, Nantes, France <br> <br>
 
 
 
@@ -53,15 +54,15 @@ Hutin, M. <span class="boldt">Weng, C</span class="boldt">. Vasilescu, I. Lamel,
 
 
 
-<span class="boldt">Weng, C</span class="boldt">. Martin, A. Chitoran, I. Perceptual assimilation of Mandarin non-sibilant fricatives by speakers of Quanzhou Southern Min. JEP 2022 - 34th Journées d’Études sur la Parole. <br> <br>
+<span class="boldt">Weng, C</span>. Martin, A. Chitoran, I. Perceptual assimilation of Mandarin non-sibilant fricatives by speakers of Quanzhou Southern Min. JEP 2022 - 34th Journées d’Études sur la Parole. <br> <br>
 
 
 
-Hutin, M. <span class="boldt">Weng, C</span class="boldt">. Vasilescu, I. Lamel, L. Adda-Decker, M. Chitoran, I. Utiliser les erreurs d’alignement automatique pour en apprendre plus sur la liaison facultative en français. CMLF 2022 - 8th Congrès Mondial de Linguistique Française. <br> <br>
+Hutin, M. <span class="boldt">Weng, C</span>. Vasilescu, I. Lamel, L. Adda-Decker, M. Chitoran, I. Utiliser les erreurs d’alignement automatique pour en apprendre plus sur la liaison facultative en français. CMLF 2022 - 8th Congrès Mondial de Linguistique Française. <br> <br>
 
 
 
-Hutin, M. <span class="boldt">Weng, C</span class="boldt">. Adda-Decker, M. Vasilescu, I. Lamel, L. Disfluences et erreurs d’alignement au niveau du phonème: le cas des consonnes de liaison en français. JEP 2022 - 34th Journées d’Études sur la Parole, June 13th–17th, 2022, Île de Noirmoutier, France <br> <br>
+Hutin, M. <span class="boldt">Weng, C</span>. Adda-Decker, M. Vasilescu, I. Lamel, L. Disfluences et erreurs d’alignement au niveau du phonème: le cas des consonnes de liaison en français. JEP 2022 - 34th Journées d’Études sur la Parole, June 13th–17th, 2022, Île de Noirmoutier, France <br> <br>
 
 
 
