--- a/caihongsite/document/Publications.html
+++ b/caihongsite/document/Publications.html
@@ -33,11 +33,11 @@
 
     <h3>Oral presentations:</h3>
 
-    <span class="boldt">Weng, C</span>. Martin, A. Chitoran, I. (2023). Non-native phonological perception in a bilingual community: The influence of Southern Min on perception of Mandarin fricatives. PaPE 2023 -Phonetics and Phonology in Europe 2023, June 2nd–4th, 2023, Nijmegen, Netherlands.
+    <span class="boldt">Weng, C</span>. Martin, A. Chitoran, I. (2023). Non-native phonological perception in a bilingual community: The influence of Southern Min on perception of Mandarin fricatives. PaPE 2023 -Phonetics and Phonology in Europe 2023, June 2nd–4th, 2023, Nijmegen, Netherlands.<br> <br>
 
 
 
-    Hutin, M. <span class="boldt">Weng, C</span>, Vasilescu, I., Lamel, L., Adda-Decker, M., Chitoran, I. (2022). La liaison facultative en français: étude de grands corpus combinant approche automatique relâchée et jugement perceptif. CMLF 2022–8th Congrès Mondial de Linguistique Française, July 4th-8th 2022, Orléans, France.
+    Hutin, M. <span class="boldt">Weng, C</span>, Vasilescu, I., Lamel, L., Adda-Decker, M., Chitoran, I. (2022). La liaison facultative en français: étude de grands corpus combinant approche automatique relâchée et jugement perceptif. CMLF 2022–8th Congrès Mondial de Linguistique Française, July 4th-8th 2022, Orléans, France.<br> <br>
 
 
 
