--- a/caihongsite/document/cv.html
+++ b/caihongsite/document/cv.html
@@ -74,7 +74,9 @@
 
    </div>
 
-    <h2>TEACHING</h2>
+    <div>
+        <h2>TEACHING</h2>
+    </div>
 
     <div class="cvcenter">
         • <span class="boldt">Language Diversity</span> (lectures and tutorials) at Université Paris Cité, Spring 2023, undergraduate-level course<br>
@@ -86,9 +88,10 @@
         • <span class="boldt">Introduction to Linguistics</span> (tutorials) at Université Paris Cité (with Mr. Nyckees) Fall 2022, undergraduate-level course<br>
     </div>
 
+    <div>
+        <h2>RESEARCH EXPERIENCE</h2>
+    </div>
 
-    <h2>RESEARCH EXPERIENCE</h2>
-    
     <div class="cvcenter">
         <h3>CLILLAC-ARP</h3>
         <span class="ital">Université Paris Cité </span><br>
