--- a/caihongsite/document/cv.html
+++ b/caihongsite/document/cv.html
@@ -28,11 +28,10 @@
        </div>
         
         <div>
-            <h2>EDUCATION</h2>
+            <h2 class="cv">EDUCATION</h2>
         </div>
     
    <div class="cvcenter">
-
 
        <h3>PhD in Linguistics, variation in speech perception and production</h3>
        <span class="date">
@@ -74,9 +73,7 @@
 
    </div>
 
-    <div>
-        <h2>TEACHING</h2>
-    </div>
+    <h2 class="cv">TEACHING</h2>
 
     <div class="cvcenter">
         • <span class="boldt">Language Diversity</span> (lectures and tutorials) at Université Paris Cité, Spring 2023, undergraduate-level course<br>
@@ -88,11 +85,10 @@
         • <span class="boldt">Introduction to Linguistics</span> (tutorials) at Université Paris Cité (with Mr. Nyckees) Fall 2022, undergraduate-level course<br>
     </div>
 
-    <div>
-        <h2>RESEARCH EXPERIENCE</h2>
-    </div>
+    <h2 class="cv">RESEARCH EXPERIENCE</h2>
 
     <div class="cvcenter">
+
         <h3>CLILLAC-ARP</h3>
         <span class="ital">Université Paris Cité </span><br>
         <span class="date">
