--- a/caihongsite/document/cv.html
+++ b/caihongsite/document/cv.html
@@ -27,11 +27,14 @@
            <h1 class="h1">Caihong Weng</h1>
        </div>
         
-        <div>
-            <h2 class="cv">EDUCATION</h2>
-        </div>
+
+
+
     
    <div class="cvcenter">
+
+       <h2>EDUCATION</h2>
+
 
        <h3>PhD in Linguistics, variation in speech perception and production</h3>
        <span class="date">
@@ -73,9 +76,12 @@
 
    </div>
 
-    <h2 class="cv">TEACHING</h2>
 
     <div class="cvcenter">
+
+        <h2>TEACHING</h2>
+
+
         • <span class="boldt">Language Diversity</span> (lectures and tutorials) at Université Paris Cité, Spring 2023, undergraduate-level course<br>
 
 
@@ -85,9 +91,13 @@
         • <span class="boldt">Introduction to Linguistics</span> (tutorials) at Université Paris Cité (with Mr. Nyckees) Fall 2022, undergraduate-level course<br>
     </div>
 
-    <h2 class="cv">RESEARCH EXPERIENCE</h2>
+
 
     <div class="cvcenter">
+
+
+        <h2>RESEARCH EXPERIENCE</h2>
+
 
         <h3>CLILLAC-ARP</h3>
         <span class="ital">Université Paris Cité </span><br>
