--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
          <div class="PHD">
              <p>I am a PhD candidate in Phonetics and Phonology at Université Paris Cité, <br>
                  under the supervision of Prof. Ioana Chitoran and Dr. Alexander Martin. <br>
-                 I am interested in Experimental Phonetics and Phonology, speech perception, <br>
-                  bilingualism, sociophonetics, Mandarin(汉语), Quanzhou Southern Min (泉州闽南语)</p>
+                 I am interested in Laboratory Phonology, link between speech perception and production, <br>
+                 sociophonetics, Mandarin(汉语), Quanzhou Southern Min (泉州闽南语)</p>
          </div>
 
     <div>
