--- a/caihongsite/document/cv.html
+++ b/caihongsite/document/cv.html
@@ -29,7 +29,7 @@
 
 
 
-    <h2>EDUCATION</h2>
+    <h2.cv>EDUCATION</h2.cv>
 
 
 
@@ -78,7 +78,7 @@
 
 
 
-    <h2>TEACHING</h2>
+    <h2.cv>TEACHING</h2.cv>
 
 
     <div class="cvcenter">
@@ -94,7 +94,7 @@
     </div>
 
 
-    <h2>RESEARCH EXPERIENCE</h2>
+    <h2.cv>RESEARCH EXPERIENCE</h2.cv>
 
 
     <div class="cvcenter">
