--- a/caihongsite/document/Publications.html
+++ b/caihongsite/document/Publications.html
@@ -23,12 +23,12 @@
 <div class="publicenter">
 
 
-    <h2>Journal articles:</h2>
+    <h2>Journal articles</h2>
 
     <span class="boldt">Weng, C</span>., Chitoran, I., Martin, A. (2023). <a href="https://pubs.aip.org/asa/jel/article/3/7/075202/2903761/Bilingual-phonological-contrast-perception-The">Bilingual phonological contrast perception: The influence of Quanzhou Southern Min on Mandarin non-sibilant fricative discrimination</a>
 
 
-    <h2>Conference presentations:</h2>
+    <h2>Conference presentations</h2>
 
     <h3>Oral presentations:</h3>
 
@@ -55,7 +55,7 @@
 
 
 
-    <h2>Conference Proceedings:</h2>
+    <h2>Conference Proceedings</h2>
 
 
 
