--- a/caihongsite/document/Publications.html
+++ b/caihongsite/document/Publications.html
@@ -25,7 +25,7 @@
 
     <h2>Journal articles</h2>
 
-    <span class="boldt">Weng, C</span>., Chitoran, I., Martin, A. (2023). <a href="https://pubs.aip.org/asa/jel/article/3/7/075202/2903761/Bilingual-phonological-contrast-perception-The">Bilingual phonological contrast perception: The influence of Quanzhou Southern Min on Mandarin non-sibilant fricative discrimination</a>
+    <span class="boldt">Weng, C</span>., Chitoran, I., Martin, A. (2023). <a href="https://pubs.aip.org/asa/jel/article/3/7/075202/2903761/Bilingual-phonological-contrast-perception-The">Bilingual phonological contrast perception: The influence of Quanzhou Southern Min on Mandarin non-sibilant fricative discrimination. JASA Express Letters, 3(7), 075202.</a>
 
 
     <h2>Conference presentations</h2>
