--- a/caihongsite/document/Publications.html
+++ b/caihongsite/document/Publications.html
@@ -13,6 +13,7 @@
         <span class="a"><a href="/index.html">Home</a></span>
         <span class="b"><a href="/caihongsite/document/cv.html">CV</a></span>
         <span class="c"><a href="/caihongsite/document/Publications.html">Publications</a></span>
+        <span class="d"><a href="/caihongsite/document/Fundings.html">Grants and awards</a> </span>
         <span class="d"><a href="/caihongsite/document/Contact.html">Contact</a> </span><br>
     </div>
 
@@ -76,6 +77,7 @@
             <span class="a"><a href="/document/index.html">Home</a></span>
             <span class="b"><a href="/document/cv.html">CV</a></span>
             <span class="c"><a href="/document/Publications.html">Publications</a></span>
+            <span class="d"><a href="/caihongsite/document/Fundings.html">Grants and awards</a> </span>
             <span class="d"><a href="/document/Contact.html">Contact</a> </span><br>
         </footer>
     </div>
