--- a/caihongsite/document/Fundings.html
+++ b/caihongsite/document/Fundings.html
@@ -66,7 +66,7 @@
         <span class="a"><a href="/document/index.html">Home</a></span>
         <span class="b"><a href="/document/cv.html">CV</a></span>
         <span class="c"><a href="/document/Publications.html">Publications</a></span>
-        <span class="d"><a href="/caihongsite/document/Fundings.html">Grants and awards</a> </span>
+        <span class="d"><a href="/document/Fundings.html">Grants and awards</a> </span>
         <span class="d"><a href="/document/Contact.html">Contact</a> </span><br>
     </footer>
 </div>
