Your descriptive commit message

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         <span class="a"><a href="index.html">Home</a></span>
         <span class="b"><a href="caihongsite/document/cv.html">CV</a></span>
         <span class="c"><a href="caihongsite/document/Publications.html">Publications</a></span>
-        <span class="d"><a href="/caihongsite/document/Fundings.html">Grants and awards</a> </span>
         <span class="d"><a href="caihongsite/document/Contact.html">Contact</a> </span><br>
     </div>
 
@@ -32,6 +31,8 @@
                  under the supervision of Prof. Ioana Chitoran and Dr. Alexander Martin. <br>
                  I am interested in Laboratory Phonology, link between speech perception and production, <br>
                  sociophonetics, Mandarin(汉语), Quanzhou Southern Min (泉州闽南语)</p>
+
+                 TEST 
          </div>
 
     <div>
@@ -52,7 +53,6 @@
             <span class="a"><a href="index.html">Home</a></span>
             <span class="b"><a href="caihongsite/document/cv.html">CV</a></span>
         <span class="c"><a href="caihongsite/document/Publications.html">Publications</a></span>
-            <span class="d"><a href="/caihongsite/document/Fundings.html">Grants and awards</a> </span>
         <span class="d"><a href="caihongsite/document/Contact.html">Contact</a> </span><br>
         </footer>
     </div>
