--- a/caihongsite/document/cv.html
+++ b/caihongsite/document/cv.html
@@ -113,7 +113,7 @@
         
         <span class="boldt">Supervisor:</span> Dr Mathilde Hutin (LISN - Laboratoire Interdisciplinaire des Sciences du Numérique) <br>
         
-        <span class="boldt">Project::</span> Son - Discours (Émergences - IDEX: Université Paris Cité - PI: Ioana Chitroan) <br>
+        <span class="boldt">Project:</span> Son - Discours (Émergences - IDEX: Université Paris Cité - PI: Ioana Chitroan) <br>
 
         <span class="date">
             Paris, France <br>
