--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="I am a PhD candidate in Phonetics and Phonology at Université Paris Cité, under the supervision of Prof. Ioana Chitoran and Dr. Alexander Martin. ">
+    <meta name="description" content="I am a PhD candidate in Linguistics at Université Paris Cité, under the supervision of Ioana Chitoran and Alexander Martin. ">
     <title>Caihong Weng</title>
     <link rel="stylesheet" href="caihongsite/css/normalize.css">
     <link rel="stylesheet" href="caihongsite/css/style.css">
@@ -28,8 +28,8 @@
     </div>
        
          <div class="PHD">
-             <p>I am a PhD candidate in Phonetics and Phonology at Université Paris Cité, <br>
-                 under the supervision of Prof. Ioana Chitoran and Dr. Alexander Martin. <br>
+             <p>I am a PhD candidate in Linguistics at <a href="https://u-paris.fr/" class="link">Université Paris Cité</a> <br>
+                 under the supervision of <a href="https://clillac-arp.u-paris.fr/annuaire/chitoran-ioana/" class="link">Ioana Chitoran</a> and <a href="http://www.lscp.net/persons/martin/" class="link">Alexander Martin</a>.<br>
                  I am interested in Laboratory Phonology, link between speech perception and production, <br>
                  sociophonetics, Mandarin(汉语), Quanzhou Southern Min (泉州闽南语)</p>
          </div>
