--- a/caihongsite/document/Contact.html
+++ b/caihongsite/document/Contact.html
@@ -13,12 +13,11 @@
       <span class="a"><a href="/index.html">Home</a></span>
         <span class="b"><a href="/caihongsite/document/cv.html">CV</a></span>
         <span class="c"><a href="/caihongsite/document/Publications.html">Publications</a></span>
-        <span class="d"><a href="/caihongsite/document/Fundings.html">Grants and awards</a> </span>
         <span class="d"><a href="/caihongsite/document/Contact.html">Contact</a> </span><br>
     </div>
 
     <div>
-      <p class="get" , id="getcontact">Get in touch</p>
+      <p class="get" id="getcontact">Get in touch</p>
       <p>caihongweng8@gmail.com</p>
       <HR width="300"></HR>
       <p class="adress">
@@ -33,7 +32,6 @@
         <span class="a"><a href="/index.html">Home</a></span>
         <span class="b"><a href="/caihongsite/document/cv.html">CV</a></span>
         <span class="c"><a href="/caihongsite/document/Publications.html">Publications</a></span>
-        <span class="d"><a href="/caihongsite/document/Fundings.html">Grants and awards</a> </span>
         <span class="d"><a href="/caihongsite/document/Contact.html">Contact</a> </span><br>
         <br />
       </footer>
