Initial commit pour le site caihong-site

--- a/caihongsite/document/Contact.html
+++ b/caihongsite/document/Contact.html
@@ -18,7 +18,7 @@
 
     <div>
       <p class="get" id="getcontact">Get in touch</p>
-      <p>caihongweng8@gmail.com</p>
+      <p>caihong.weng@u-paris.fr</p>
       <HR width="300"></HR>
       <p class="adress">
         Bâtiment Olympe de Gouges, 5th floor <br />
