--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
          <div class="PHD">
              <p>I am a PhD candidate in Linguistics at <a href="https://u-paris.fr/" class="link">Université Paris Cité</a> <br>
                  under the supervision of <a href="https://clillac-arp.u-paris.fr/annuaire/chitoran-ioana/" class="link">Ioana Chitoran</a> and <a href="http://www.lscp.net/persons/martin/" class="link">Alexander Martin</a>.<br>
-                 I am interested in Laboratory Phonology, link between speech perception and production, <br>
+                 I am interested in Experimental Phonetics, link between speech perception and production, <br>
                  sociophonetics, Mandarin(汉语), Quanzhou Southern Min (泉州闽南语)</p>
          </div>
 
     <div>
         <p class="get"> Get in touch </p>
-        <p>caihongweng8@gmail.com</p>
+        <p>caihong.weng@u-paris.fr</p>
         <HR width="300"></HR>
         <p class="adress">
         Bâtiment Olympe de Gouges, 5th floor <br>
@@ -51,7 +51,6 @@
             <span class="a"><a href="index.html">Home</a></span>
             <span class="b"><a href="caihongsite/document/cv.html">CV</a></span>
         <span class="c"><a href="caihongsite/document/Publications.html">Publications</a></span>
-            <span class="d"><a href="/caihongsite/document/Fundings.html">Grants and awards</a> </span>
         <span class="d"><a href="caihongsite/document/Contact.html">Contact</a> </span><br>
         </footer>
     </div>
